data/derived/comb/progs/unify/prog0604.ml.out
Characters 750-751:
  (atan(res1) +. atan(res2) -. atan(res3)) *. 2 / (3.0 *. pi)
                                              ^
Error: This expression has type int but an expression was expected of type
         float
